objects/Engineer__c/Engineer__c.object-meta.xml
<CustomObject>
    <description>This Object contains all the information regarding personnel who are in the role of Engineer.</description>
    <label>Technician</label>
    <nameField>
        <label>Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>