objects/Engineer__c/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <inlineHelpText>If this is Yes, the technician is still employed. If No, the technician has left.</inlineHelpText>
    <label>Active User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>