objects/Engineer__c/fields/Advanced__c.field-meta.xml
<CustomField>
    <fullName>Advanced__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Advanced</label>
    <type>Date</type>
</CustomField>