objects/Engineer__c/fields/Bafe__c.field-meta.xml
<CustomField>
    <fullName>Bafe__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Bafe</label>
    <type>Date</type>
</CustomField>