objects/Engineer__c/fields/Base_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Base_Office_Address__c</fullName>
    <label>Base Office Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>