objects/Engineer__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;Australia&quot;</defaultValue>
    <label>Country</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>