objects/Engineer__c/fields/Disciplines__c.field-meta.xml
<CustomField>
    <fullName>Disciplines__c</fullName>
    <label>Disciplines</label>
    <length>100</length>
    <type>Text</type>
</CustomField>