objects/Engineer__c/fields/Door_Access__c.field-meta.xml
<CustomField>
    <fullName>Door_Access__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Door Access</label>
    <type>Date</type>
</CustomField>