objects/Engineer__c/fields/EDA_EMS_Wireless__c.field-meta.xml
<CustomField>
    <fullName>EDA_EMS_Wireless__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>EDA/EMS/Wireless</label>
    <type>Date</type>
</CustomField>