objects/Engineer__c/fields/EDA_programmer_on_van__c.field-meta.xml
<CustomField>
    <fullName>EDA_programmer_on_van__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>EDA programmer on van</label>
    <type>Date</type>
</CustomField>