objects/Engineer__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The technician is either on holiday, sick, or training.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>