objects/Engineer__c/fields/Engineer_ID__c.field-meta.xml
<CustomField>
    <fullName>Engineer_ID__c</fullName>
    <label>Technician ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>