objects/Engineer__c/fields/Fire_Curtains__c.field-meta.xml
<CustomField>
    <fullName>Fire_Curtains__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Fire Curtains</label>
    <type>Date</type>
</CustomField>