objects/Engineer__c/fields/Gent__c.field-meta.xml
<CustomField>
    <fullName>Gent__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Gent</label>
    <type>Date</type>
</CustomField>