objects/Engineer__c/fields/GEO_Location__c.field-meta.xml
<CustomField>
    <fullName>GEO_Location__c</fullName>
    <label>GEO Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>