objects/Engineer__c/fields/Harness__c.field-meta.xml
<CustomField>
    <fullName>Harness__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Harness</label>
    <type>Date</type>
</CustomField>