objects/Engineer__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <label>Home Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>