objects/Engineer__c/fields/IPAF__c.field-meta.xml
<CustomField>
    <fullName>IPAF__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>IPAF</label>
    <type>Date</type>
</CustomField>