objects/Engineer__c/fields/Ladders_on_van__c.field-meta.xml
<CustomField>
    <fullName>Ladders_on_van__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Ladders on van</label>
    <type>Date</type>
</CustomField>