objects/Engineer__c/fields/Laptop_ID__c.field-meta.xml
<CustomField>
    <fullName>Laptop_ID__c</fullName>
    <label>Laptop ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>