objects/Engineer__c/fields/Morley__c.field-meta.xml
<CustomField>
    <fullName>Morley__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Morley</label>
    <type>Date</type>
</CustomField>