objects/Engineer__c/fields/Notifier__c.field-meta.xml
<CustomField>
    <fullName>Notifier__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Notifier</label>
    <type>Date</type>
</CustomField>