objects/Engineer__c/fields/Nurse_Call__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Call__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Nurse Call</label>
    <type>Date</type>
</CustomField>