objects/Engineer__c/fields/Open_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Open_Schedule__c</fullName>
    <formula>HYPERLINK(&quot;/00O28000001PDQg?pv0=&quot;&amp; Name &amp;&quot;&amp;pv1=&quot;&amp;Name, &quot;Next 14 Days&quot;, &quot;_blank&quot;)&amp;BR()&amp;
HYPERLINK(&quot;/00O28000001PDNo?pv0=&quot;&amp; Name &amp;&quot;&amp;pv1=&quot;&amp;Name, &quot;Next 30 Days&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Schedule</label>
    <type>Text</type>
</CustomField>