objects/Engineer__c/fields/Postcodes_Served__c.field-meta.xml
<CustomField>
    <fullName>Postcodes_Served__c</fullName>
    <label>Postcodes Served</label>
    <type>TextArea</type>
</CustomField>