objects/Engineer__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <label>Service Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fire Extinguisher</fullName>
            </value>
            <value>
                <fullName>Fire Alarm</fullName>
            </value>
            <value>
                <fullName>Intruder &amp; CCTV</fullName>
            </value>
            <value>
                <fullName>Fire Sprinkler Valves and Pumps</fullName>
            </value>
            <value>
                <fullName>Riser &amp; Hydrant</fullName>
            </value>
            <value>
                <fullName>Suppression Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>