objects/Engineer__c/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <inlineHelpText>Enter the Start date of the technician on call. This will then display a message on the Visits that are scheduled during this time period to alert the schedulers that the technician is on call.</inlineHelpText>
    <label>Call Start Date</label>
    <type>Date</type>
</CustomField>