objects/Engineer__c/fields/Smoke_Vents__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Vents__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Smoke Vents</label>
    <type>Date</type>
</CustomField>