objects/Engineer__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The technician is either on holiday, sick, or training.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>