objects/Engineer__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State / Province</label>
    <type>TextArea</type>
</CustomField>