objects/Engineer__c/fields/Stratoss__c.field-meta.xml
<CustomField>
    <fullName>Stratoss__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Stratoss</label>
    <type>Date</type>
</CustomField>