objects/Engineer__c/fields/Technician_Group__c.field-meta.xml
<CustomField>
    <fullName>Technician_Group__c</fullName>
    <inlineHelpText>Please enter the name of the scheduler for this Technician.</inlineHelpText>
    <label>Technician Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angie Davey</fullName>
            </value>
            <value>
                <fullName>Joel Bidmead</fullName>
            </value>
            <value>
                <fullName>Jo Fyffe</fullName>
            </value>
            <value>
                <fullName>Mel Jones</fullName>
            </value>
            <value>
                <fullName>Nigel Welch</fullName>
            </value>
            <value>
                <fullName>Samantha Cavinder</fullName>
            </value>
            <value>
                <fullName>Sharon Standen</fullName>
            </value>
            <value>
                <fullName>Tim Mann</fullName>
            </value>
            <value>
                <fullName>Tracey Coles</fullName>
            </value>
            <value>
                <fullName>Viv Stuchbery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>