objects/Engineer__c/fields/Technician_Super_Group__c.field-meta.xml
<CustomField>
    <fullName>Technician_Super_Group__c</fullName>
    <inlineHelpText>Enter either North or South. This field will help creating Views of Technicians in their Service Groups.</inlineHelpText>
    <label>Technician Super Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>