objects/Engineer__c/fields/Third_Party_Company__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Company__c</fullName>
    <inlineHelpText>Please keep this consistent so that you can create views of all third party companies and so that reporting will work. Check the technicians records to see if this third party has been mentioned before.</inlineHelpText>
    <label>Third Party Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>