objects/Engineer__c/fields/Third_Party_Technician__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick this box if the technician works for a third party. Visits attended by a third party are rescheduled but the technician is left blank</inlineHelpText>
    <label>Third Party Technician</label>
    <type>Checkbox</type>
</CustomField>