objects/Engineer__c/fields/Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration__c</fullName>
    <label>Vehicle Registration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>