objects/Engineer__c/fields/Vesda__c.field-meta.xml
<CustomField>
    <fullName>Vesda__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Vesda</label>
    <type>Date</type>
</CustomField>