objects/Engineer__c/fields/WMC_Security_cleared__c.field-meta.xml
<CustomField>
    <fullName>WMC_Security_cleared__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>WMC Security cleared</label>
    <type>Date</type>
</CustomField>