objects/Engineer__c/fields/X17th_Edition__c.field-meta.xml
<CustomField>
    <fullName>X17th_Edition__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>17th Edition</label>
    <type>Date</type>
</CustomField>