objects/Engineer__c/fields/Ziton__c.field-meta.xml
<CustomField>
    <fullName>Ziton__c</fullName>
    <inlineHelpText>Enter date received/the date you were aware they had this item.</inlineHelpText>
    <label>Ziton</label>
    <type>Date</type>
</CustomField>