objects/Engineer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engineer_ID__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Desk_Phone__c</columns>
    <columns>Disciplines__c</columns>
    <columns>Postcodes_Served__c</columns>
    <columns>Active_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>